docs/v2.0.2/Add-Mappls-Map.md
[<img src="https://about.mappls.com/images/mappls-b-logo.svg" height="60"/> </p>](https://www.mapmyindia.com/api)
# Mappls Map SDK
Mappls Map SDK is a powerful and versatile software development kit that enables developers to seamlessly integrate rich, interactive mapping and location-based services into their mobile and web applications. With comprehensive support for detailed maps, routing, geocoding, real-time traffic updates, and advanced spatial analytics, the SDK empowers businesses to create intuitive navigation experiences and location-aware solutions. Its customizable UI components, efficient performance, and extensive API set make it ideal for building applications across various industries including logistics, transportation, travel, and urban planning.

## [Version History]()

| Version | Last Updated | Author                                                                                  | Release Note                                                                                                                                                                                           | 
|---------|--------------|-----------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| v2.0.7  | 15 Sep, 2026 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Updated minimum Android version to 23   </br> - Fix Bitmap Optimisation Play Store Warning in Android </br> - Added `mapCentre` & `isPrimary` in Autosuggest Request </br> - Added `suggester` & `partnersFlag` in AutoSuggest Response </br> - Added `filter`, `bounds`, `refLocation` & `bridge` in POI Along Route Request </br> - Added `responseCode`, `pageInfo`, `suggestedSearches`, `partnersFlag`, `hourOfOperation`, `longDescription`, `shortDescription` & `orderIndex` in POI Along Route Response </br> - Added `scores` & `actualGeoLevel` in Geocoding Request </br> - Added `confidenceScore` & `mapplsPinAdminType` in Geocoding Response </br> - Added `itemCount` in Nearby Request </br> - Added `explanation`, `partnersFlag` & `baseUrl` in Nearby Response </br> - Added `isVenue`, `entryCoordinates` & `venueDetails` in Reverse Geocoding Response |
| v2.0.6  | 03 Aug, 2026 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Implemented security enhancements in Android   </br> - Significant Improvements                                                                                                                      |
| v2.0.5  | 04 May, 2026 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes and Improvement                                                                                                                                                                            |
| v2.0.4  | 03 Apr, 2026 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Fix `_` support in package Name in Android </br> - Remove `hyperLocal` and `zoom` from Autosuggest Request </br> - Remove `username` from Nearby Request </br> - Fix Marker Click issue in Web       |
| v2.0.3  | 13 Jan, 2026 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes and Improvement                                                                                                                                                                            |

For more details of previous versions , [click here](./Version-History.md).

## Import Flutter Map
In your dart code you need to import this package:
```dart
import 'package:mappls_gl/mappls_gl.dart';
```

## Add Flutter Mappls Map
To add Mappls Map to your flutter Application:
```dart
MapplsMap(  
  initialCameraPosition: CameraPosition(  
	  target: LatLng(28.551087, 77.257373),  
	  zoom: 14.0,  
	),  
  onMapCreated: (mapController) => {  
	  mapplsMapController = mapController
  },  
)
```

<br><br><br>

For any queries and support, please contact: 

[<img src="https://about.mappls.com/images/mappls-logo.svg" height="40"/> </p>](https://about.mappls.com/api/)
Email us at [apisupport@mappls.com](mailto:apisupport@mappls.com)


![](https://www.mapmyindia.com/api/img/icons/support.png)
[Support](https://about.mappls.com/contact/)
Need support? contact us!

<br></br>
<br></br>

[<p align="center"> <img src="https://www.mapmyindia.com/api/img/icons/stack-overflow.png"/> ](https://stackoverflow.com/questions/tagged/mappls-api)[![](https://www.mapmyindia.com/api/img/icons/blog.png)](https://about.mappls.com/blog/)[![](https://www.mapmyindia.com/api/img/icons/gethub.png)](https://github.com/Mappls-api)[<img src="https://mmi-api-team.s3.ap-south-1.amazonaws.com/API-Team/npm-logo.one-third%5B1%5D.png" height="40"/> </p>](https://www.npmjs.com/org/mapmyindia) 



[<p align="center"> <img src="https://www.mapmyindia.com/june-newsletter/icon4.png"/> ](https://www.facebook.com/Mapplsofficial)[![](https://www.mapmyindia.com/june-newsletter/icon2.png)](https://twitter.com/mappls)[![](https://www.mapmyindia.com/newsletter/2017/aug/llinkedin.png)](https://www.linkedin.com/company/mappls/)[![](https://www.mapmyindia.com/june-newsletter/icon3.png)](https://www.youtube.com/channel/UCAWvWsh-dZLLeUU7_J9HiOA)




<div align="center">@ Copyright 2026 CE Info Systems Ltd. All Rights Reserved.</div>

<div align="center"> <a href="https://about.mappls.com/api/terms-&-conditions">Terms & Conditions</a> | <a href="https://about.mappls.com/about/privacy-policy">Privacy Policy</a> | <a href="https://about.mappls.com/pdf/mapmyIndia-sustainability-policy-healt-labour-rules-supplir-sustainability.pdf">Supplier Sustainability Policy</a> | <a href="https://about.mappls.com/pdf/Health-Safety-Management.pdf">Health & Safety Policy</a> | <a href="https://about.mappls.com/pdf/Environment-Sustainability-Policy-CSR-Report.pdf">Environmental Policy & CSR Report</a>

<div align="center">Customer Care: +91-9999333223</div>
